# public/assets/js/swagger.json
@@ -258,6 +258,69 @@
           ]
         }
       },
+      "UserBody": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "required": true,
+            "description": "The auto-generated id of the user"
+          },
+          "firstName": {
+            "type": "string",
+            "required": false
+          },
+          "middleName": {
+            "type": "string",
+            "required": false
+          },
+          "lastName": {
+            "type": "string",
+            "required": false
+          },
+          "email": {
+            "type": "string",
+            "required": false
+          },
+          "idNumber": {
+            "type": "string",
+            "required": false
+          },
+          "yearOfBirth": {
+            "type": "string",
+            "required": false
+          }
+        },
+        "example": {
+          "userId": "string",
+          "firstName": "string",
+          "middleName": "string",
+          "lastName": "string",
+          "email": "string",
+          "idNumber": "string",
+          "yearOfBirth": "string"
+        }
+      },
+      "UserBodyStatus": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "required": true,
+            "description": "Identifier of the entity to toggle status"
+          },
+          "activate": {
+            "type": "boolean",
+            "required": true,
+            "description": "Activate flag toggles active(activate: true) and inactive(activate: false) status",
+            "example": ["true", "false"]
+          }
+        },
+        "example": {
+          "id": "string",
+          "activate": true
+        }
+      },
 
       "Vehicle": {
         "type": "object",
@@ -1762,6 +1825,86 @@
           },
           "403": {
             "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/api/v1/user/updateUser": {
+      "put": {
+        "tags": ["User"],
+        "summary": "Update Users",
+        "description": "Update User",
+        "operationId": "updateUser",
+        "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserBody"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Request processed successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/user/updateUserStatus": {
+      "put": {
+        "tags": ["User"],
+        "summary": "Update User Status",
+        "description": "Update User Status",
+        "operationId": "updateUserStatus",
+        "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserBodyStatus"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Request processed successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
